Fix issue with horizontal scrolling of main content
When use a flex-box layout, when a block element is wider than the
width of the parent element a horizontal scroll bar is added to the page.
Setting the flex-box's 'overflow' property to 'hidden' solves this issue.

--- a/development/front-end/src/scss/main.scss
+++ b/development/front-end/src/scss/main.scss
@@ -612,6 +612,7 @@ nav {
 
 main {
     margin-right: 70px;
+    overflow: hidden;       // Required so that block elements wider than 'main' do not expand the flex-box.
     padding: 60px 0 0;
     width: $main-width;
 
